getComputedStyle should handle over-constrained properties.

If neither 'left' nor 'right' is 'auto', the position is over-constrained,
and one of them has to be ignored. If 'direction' property of the
containing block is 'ltr', the value of 'left' wins and 'right'
becomes -'left'. If 'direction' of the containing block is 'rtl',
'right' wins and 'left' is ignored. Detail is described by
https://www.w3.org/TR/2011/REC-CSS2-20110607/visuren.html#relative-positioning

BUG=601118

Review-Url: https://codereview.chromium.org/1988813002
Cr-Commit-Position: refs/heads/master@{#394780}

Former-commit-id: c8291dea8bfa84ab9a3220fb9f57eb059e913a05